# Infinite_Maze

./: .flake8  .gitignore  LICENSE  MODERNIZATION_SUMMARY.md  Makefile  README.md  TEST_SUITE_SUMMARY.md  game.py  justfile  migrate_to_modern.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  rl_environment.py  run_game.bat  run_game.py  run_tests.py  setup.bat  setup.py  setup.sh
.github/: dependabot.yml
.github/agents/: ml-trainer.agent.md  pygame-dev.agent.md
.github/instructions/: pygame-testing.instructions.md  pygame.instructions.md
.github/prompts/: extract_test_steps.prompt.md  lint-check.prompt.md  ml-evaluate-progress.prompt.md  ml-training-plan.prompt.md
.github/roles/: AI_AGENT_ROLE.md  PYTHON_GAME_FRAMEWORK_EXPERT.md  PYTHON_GAME_TESTING_EXPERT.md  python_game_modernization_expert.md
.github/workflows/: quality.yml  tests.yml
docs/: README.md  api-reference.md  architecture.md  contributing.md  development.md  installation-guide.md  player-guide.md  quick-reference.md  testing-guide.md  troubleshooting.md
docs/ai/: evaluation_criteria.md  maze_complexity.md  maze_simplicity.md  oscillation_mitigation.md  phase_transition.md  state_representation.md  training_plan.md  training_safeguards.md
infinite_maze/: Clock.py  Game.py  Line.py  Player.py  __init__.py  __main__.py  config.py  infinite_maze.py  logger.py  nn.py
infinite_maze/ai/: README.md  __init__.py  agent.py  environment.py  evaluate.py  evaluate_phase1.py  main.py  models.py  phase1_env.py  requirements.txt  train_phase1.py
infinite_maze/core/: __init__.py  clock.py  engine.py  game.py
infinite_maze/entities/: __init__.py  maze.py  player.py
infinite_maze/ml/: README.md  __init__.py  diagnose.py  environment.py  evaluate.py  features.py  rewards.py  train.py  watch.py
infinite_maze/utils/: __init__.py  config.py  logger.py
rl/: README.md  __init__.py  continue_training.py  environment.py  test_agent.py  train_agent.py  train_improved.py  train_navigation.py
tests/: README.md  conftest.py
tests/fixtures/: game_fixtures.py  pygame_mocks.py  (+1 more)
(+29 files in other folders)
